[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/touch_controls.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/controls/debug/transparentLight/transparentLight09.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 128.0

[sub_resource type="DynamicFontData" id=2]

font_path = "res://assets/fonts/Cartwheel/Sansani Fonts - Cartwheel.otf"

[sub_resource type="DynamicFont" id=3]

size = 45
use_mipmaps = false
use_filter = false
font_data = SubResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 128.0

[sub_resource type="DynamicFontData" id=5]

font_path = "res://assets/fonts/Cartwheel/Sansani Fonts - Cartwheel.otf"

[sub_resource type="DynamicFont" id=6]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="TouchControls" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="LeftControl" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 260.0
margin_top = -292.0
margin_right = 300.0
margin_bottom = -252.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="LeftButton" type="TouchScreenButton" parent="LeftControl" index="0"]

position = Vector2( -158, -128 )
scale = Vector2( 2, 2 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = true
passby_press = false
action = "left_action"
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="LeftControl/LeftButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.886719, 0.997345, 1, 1 )
text = "TEST"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="RightControl" type="Control" parent="." index="1"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -257.0
margin_top = -292.0
margin_right = -217.0
margin_bottom = -252.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="RightButton" type="TouchScreenButton" parent="RightControl" index="0"]

position = Vector2( -158, -128 )
scale = Vector2( 2, 2 )
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = SubResource( 4 )
shape_centered = true
shape_visible = true
passby_press = false
action = "right_action"
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="RightControl/RightButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.886719, 0.997345, 1, 1 )
text = "TEST"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LeftTween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="RightTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="fps_label" type="Label" parent="." index="4"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -266.0
margin_bottom = 100.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "30 fps"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "custom_fonts" ]


